[gd_scene load_steps=2 format=3 uid="uid://t0dc8qi6gkea"]

[ext_resource type="Script" path="res://main.gd" id="1_vmtdt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_vmtdt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Button" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button2" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button3" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button4" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button5" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button6" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button7" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button8" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="Button9" type="Button" parent="CanvasLayer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 100

[node name="PlayerText" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.5
offset_top = -56.0
offset_right = 45.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Player 1 : X"
horizontal_alignment = 1

[node name="TIC_TAC_TOE" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = 13.0
offset_right = 87.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "TIC TAC TOE"
horizontal_alignment = 1

[node name="Reset" type="Button" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 67.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 20
text = "Reset"

[connection signal="pressed" from="CanvasLayer/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="CanvasLayer/Reset" to="." method="_on_reset_pressed"]
